2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* session.c:
	Bug #6036 <https://bugs.freedesktop.org/show_bug.cgi?id=6036>
	Check for key_setnet declaration before defining it to avoid
	compiler error of conflicting types on DragonFly BSD

2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* netaddr.c: 
	Bug #6026 <https://bugs.freedesktop.org/show_bug.cgi?id=6026>
	Segfault in netaddr.c:ConvertAddr if ifa_addr is NULL
	(Loser Mcloser <reebydobalina@yahoo.ca>)

2006-02-24  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Alan.Coopersmith@Sun.COM

	* config/Xsession.cpp:
	Bug #5897 <https://bugs.freedesktop.org/show_bug.cgi?id=5897>
	Create xsession error file with umask 077 instead of chmod
	a moment later. This was reported by Steven M. Bellovin to NetBSD.
	<http://www.netbsd.org/cgi-bin/query-pr-single.pl?number=32804>

2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/Login.c: 
	Bug #1391 <https://bugs.freedesktop.org/show_bug.cgi?id=1391>
	Patch #4739 <https://bugs.freedesktop.org/attachment.cgi?id=4739>
	xdm hangs in a loop when invalid xpm bitmap is used for logo
	(Costantino Leandro <lcostantino@gmail.com>)

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* README:
	* configure.ac:
	* config/Makefile.am: 
	* config/xdm-config.cpp:
	Bugzilla #5055 <https://bugs.freedesktop.org/show_bug.cgi?id=5055>
	Add --with-xdmscriptdir to allow builder/packager to decide if
	scripts should go in config, lib, or data directories.

2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	* configure.ac:
	Change to use the app-defaults default dir configured in libXt.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>
