@@ -1,3 +1,9 @@
+2006-03-01  Matthias Hopf  <mhopf@suse.de>
+
+	* greeter/verify.c: (PAM_conv):
+	openSUSE bug #142954
+	Fixed potential segfault on OOM condition.
+
 2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* configure.ac:
